tests/spec/compile-pass/053_container_element_access_methods.zn
// category: compile-pass
// profile: freestanding
// purpose: indexed element access stays simple while ownership extraction uses container methods

module tests.pass.containerElementAccessMethods;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

struct Packet {
    value: U32,
}

impl Packet {
    destroy {}
}

fn normalize(mut packet: Packet) {
    packet.value = packet.value + 1;
}

fn usePacket(move packet: Packet) -> U32 {
    return packet.value;
}

fn demo(mut allocator: GlobalAllocator) -> Result<U32, AllocError> {
    var packets = Vector<Packet>.withCapacityIn(4, mut allocator);
    mut packets.push(Packet { value: 1 });
    mut packets.push(Packet { value: 2 });

    val firstValue = packets[0].value;
    normalize(mut packets[0]);

    val old = mut packets.replaceAt(1, Packet { value: 10 });
    val removed = mut packets.removeAt(0);

    mut packets.push(Packet { value: 20 });
    val fast = mut packets.swapRemove(0);

    return Ok(firstValue + usePacket(move old) + usePacket(move removed) + usePacket(move fast));
}
