tests/spec/compile-fail/090_move_from_index_access.zn
// category: compile-fail
// profile: freestanding
// purpose: non-Copy elements cannot be moved out through indexed access

module tests.fail.moveFromIndexAccess;

import core.alloc.GlobalAllocator;

struct Packet {
    value: U32,
}

impl Packet {
    destroy {}
}

fn bad(mut allocator: GlobalAllocator) -> Packet {
    var packets = Vector<Packet>.withCapacityIn(1, mut allocator);
    packets.push(Packet { value: 1 });
    return packets[0]; // expected-error: cannot move out through indexed access; use removeAt or swapRemove
}
